1999-09-13 17:03 -0700  Zack Weinberg  <zack@bitmover.com>

	* config/gmicro/gmicro.md: Disable move DF->DI anonymous pattern.

Mon Sep 13 15:21:46 1999  Richard Henderson  <rth@cygnus.com>

	* i386.c (call_insn_operand): Reject const_int.
	(expander_call_insn_operand): Use call_insn_operand.

Mon Sep 13 17:44:28 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.c (getrusage): Wrap prototype arguments in PROTO().

1999-09-13 12:18 -0700  Zack Weinberg  <zack@bitmover.com>

	* config/i370/i370.md (mulsi, divsi, modsi anonymous insns):
	Use DImode operation.

1999-09-13 12:13 -0700  Zack Weinberg  <zack@bitmover.com>

	* gcc.c: Include sys/resource.h.
	(report_times): New flag.
	(execute):  If report_times is set, calculate and report the
	CPU time consumed by each subprocess.

	(rus, prus): New globals.
	(option_map): Add --time.
	(display_help): Document -time.
	(process_command): Set report_times if -time is given.
	Turn off -pipe if -time is given.

	* invoke.texi: Document new option -time.

	* configure.in: Check for getrusage.  Check if we have to
	prototype getrusage.
	* acconfig.h: Add NEED_DECLARATION_GETRUSAGE.
	* configure: Regenerate.
	* config.in: Regenerate.

Mon Sep 13 12:57:06 1999  Dave Brolley  <brolley@cygnus.com>

	* cppinit.c (append_include_chain): Initialize 'next' and 'alloc'
	fields.

Mon Sep 13 10:01:33 1999  Nick Clifton  <nickc@cygnus.com>

	* config/fp-bit.c: Define L_thenan_sf or L_thenan_df (as
	appropriate) if FINE_GRAINED_LIBRARIES is not defined.
	(nan): Return _thenan_sf or _thenan_df as appropriate.
	(L_thenan_sf): Define _thenan_sf.
	(L_thenan_df): Define _thenan_df.

	* Makefile.in (FPBIT_FUNCS): Add _thenan_sf.
	(DPBIT_FUNCS): Add _thenan_df.

Mon Sep 13 09:38:53 1999  Andreas Schwab  <schwab@suse.de>

	* tree.c (fix_sizetype):  Exchange the types for TYPE_SIZE and
	TYPE_SIZE_UNIT.

Sun Sep 12 23:28:20 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (gcc.o, gccspec.o, cppspec.o): Depend on gcc.h.
